installs and updates

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shirkus-website",
+  "name": "kennel-shebonemo-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
