--- a/sanity-studio/package.json
+++ b/sanity-studio/package.json
@@ -1,5 +1,5 @@
 {
-  "name":"kennel-shebonemo-cms",
+  "name": "kennel-shebonemo-cms",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "@sanity/client": "^6.28.1",
+    "@sanity/color-input": "^4.0.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.77.1",
     "dotenv": "^16.4.7",
