--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,14 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  functions = "functions"
 [[redirects]]
   from = "/sitemap.xml"
   to = "/public/sitemap.xml"
+  status = 200
+
+# SPA fallback
+  [[redirects]]
+  from = "/*"
+  to = "/index.html"
   status = 200
